[tool.poetry]
name = "muffin-prometheus"
version = "1.4.1"
description = "Prometheus metrics exporter for Muffin framework"
readme = "README.rst"
license = "MIT"
authors = ["Kirill Klenov <horneds@gmail.com>"]
keywords = ["prometheus-exporter", "muffin", "asyncio", "trio", "curio"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Framework :: AsyncIO",
  "Framework :: Trio",
]
homepage = "https://github.com/klen/muffin-prometheus"
repository = "https://github.com/klen/muffin-prometheus"

[tool.poetry.dependencies]
python = "^3.9"
muffin = "^0"
asgi-prometheus = "^1.1.2"

[tool.poetry.group.tests.dependencies]
pytest = "*"
pytest-aio = { version = "*", extras = ["curio", "trio"] }
pytest-mypy = "*"
ruff = "*"

[tool.poetry.group.dev.dependencies]
pre-commit = "*"

[tool.pytest.ini_options]
addopts = "-xsv --mypy"

[tool.mypy]
packages = ["muffin_prometheus"]
ignore_missing_imports = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39,py310,py311,py312,pypy39

[testenv]
deps = -e .[tests]
commands =
	pytest --mypy tests.py

[testenv:pypy39]
deps = -e .[tests]
commands =
	pytest tests.py
"""

[tool.ruff]
fix = true
line-length = 100
target-version = "py39"
exclude = [".venv", "docs", "examples"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "A003",
  "ANN",
  "D",
  "DJ",
  "EM",
  "N804",
  "PLR0912",
  "PLR2004",
  "RET",
  "RSE",
  "S101",
  "SLF",
  "TRY003",
  "UP",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
