[bumpversion]
commit = True
current_version = 0.10.12
files = muffin_prometheus/__init__.py
tag = True
tag_name = {new_version}

[wheel]
python-tag = py3

[metadata]
name = muffin-prometheus
version = attr: muffin_prometheus.__version__
url = https://github.com/klen/muffin-prometheus
description = Prometheus metrics exporter for Muffin framework
long_description = file: README.rst
author = Kirill Klenov
author_email = horneds@gmail.com
license = MIT
license_files = LICENSE
keywords = prometheus-exporter, muffin, asyncio, trio, curio
project_urls = 
	Documentation = https://github.com/klen/muffin-prometheus
	Source code = https://github.com/klen/muffin-prometheus
	Issue tracker = https://github.com/klen/muffin-prometheus/issues
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Framework :: AsyncIO
	Framework :: Trio

[options]
packages = muffin_prometheus
include_package_data = True
python_requires = >= 3.7
install_requires = 
	muffin          >= 0.65.1
	asgi-prometheus >= 1.0.0

[options.extras_require]
tests = 
	pytest
	pytest-aio[curio,trio]
	pytest-mypy

[pylama]
ignore = D211,D213

[pylama:setup.py]
ignore = D

[pylama:tests.py]
ignore = D

[tool:pytest]
addopts = -xsv --mypy

[tox:tox]
envlist = py37,py38,py39

[testenv]
deps = -e .[tests]
commands = 
	pytest tests.py
