[wheel]
python-tag = py3

[metadata]
name = muffin-prometheus
version = attr: muffin_prometheus.__version__
url = https://github.com/klen/muffin-prometheus
description = Prometheus metrics exporter for Muffin framework
long_description = file: README.rst
author = Kirill Klenov
author_email = horneds@gmail.com
license = MIT
license_files = LICENSE
keywords = prometheus-exporter, muffin, asyncio, trio, curio
project_urls = 
	Documentation = https://github.com/klen/muffin-prometheus
	Source code = https://github.com/klen/muffin-prometheus
	Issue tracker = https://github.com/klen/muffin-prometheus/issues
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Framework :: AsyncIO
	Framework :: Trio

[options]
packages = muffin_prometheus
include_package_data = True
python_requires = >= 3.7

[mypy]
ignore_missing_imports = True

[pylama]
ignore = D211,D213

[pylama:setup.py]
ignore = D

[pylama:tests.py]
ignore = D

[tool:pytest]
addopts = -xsv --mypy

[tox:tox]
envlist = py37,py38,py39,py310

[testenv]
deps = -e .[tests]
commands = 
    pytest tests.py
